apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: servarr
  labels:
    app.kubernetes.io/name: jellyfin
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.kennyandries.com
    traefik.ingress.kubernetes.io/router.middlewares: traefik-system-security-headers@kubernetescrd
spec:
  ingressClassName: traefik-system-traefik
  rules:
    - host: jellyfin.kennyandries.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
